crates/reinhardt-pages/tests/ui/page/fail/unclosed_if.stderr
error: mismatched closing delimiter: `)`
  --> tests/ui/page/fail/unclosed_if.rs:9:36
   |
 9 |     let _invalid = page!(|show: bool| {
   |                                       ^ unclosed delimiter
...
15 | });
   |  ^ mismatched closing delimiter
